<resources>
    <string name="app_name">TradeMax Otago</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_your_account">Sign in with your account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="textforgot">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="title_activity_home_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_like">Like</string>
    <string name="title_cart">Cart</string>
    <string name="title_user">User</string>
    <string name="my_orders">My orders</string>
    <string name="shipping_addresses">Shipping addresses</string>
    <string name="settings">Settings</string>
    <string name="term_amp_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="signout">Signout</string>
    <string name="price_range">Price Range</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="internet_connection">Please check internet connection</string>
    <string name="login">Login</string>
    <string name="alltext">Sometimes life feels like a carnival, lots of ups and downs and 360 spins, maybe a few bumps along the way. With this in mind, Marcelo Burlon County of Milan presents this black cotton bumper car print T-shirt. Enjoy the ride! Featuring a ribbed crew neck, short sleeves, a graphic print and a straight fit.</string>

    <string name="facebook_app_id">397970205132064</string>
    <string name="fb_login_protocol_scheme">fb397970205132064</string>


    <string name="internet">Please check your internet connection</string>
    <string name="pay">PAY</string>
    <string name="publishablekey">pk_test_51HCYjQIyUd4AmPmvtzu4NPXWWlx6KoU6XIkm2H3z2wChgIlfLhbp6AYKPUxL408dyTqzkycn2QfntyGrk45ZxKdA00uXeiG9D3</string> />

</resources>