<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.trademax.Fragments.UserProfile.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"
                app:civ_border_color="#FF000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="start|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Carla Willis"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="carlawillis@gmail.com"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/li_myOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/my_orders"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:rotation="180"
                android:src="@drawable/back_icon"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_shippingAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/shipping_addresses"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_term_Condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/term_amp_conditions"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <View
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/li_signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/signout"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="0.1"
            android:rotation="180"
            android:src="@drawable/back_icon"
            app:tint="@color/gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="Version:1.0.4"
            android:textColor="@color/gray"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>