<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.trademax.Activities.Settings.SettingActivity">

    <LinearLayout
        android:id="@+id/linear_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        android:visibility="visible"
        android:weightSum="1">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/back_icon"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tool_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="Categories"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/tool_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:src="@drawable/search"
            android:visibility="gone"
            app:tint="@color/black" />

        <!--        </androidx.appcompat.widget.Toolbar>-->

    </LinearLayout>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0.1dp"-->
<!--        android:background="@color/gray" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Settings"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textSize="22dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/li_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/edit_profile"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:rotation="180"
                android:src="@drawable/back_icon"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/li_changePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:rotation="180"
                android:src="@drawable/back_icon"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:alpha="0.5"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/li_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_weight="0.1"
                android:rotation="180"
                android:src="@drawable/back_icon"
                app:tint="@color/gray" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>